--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new app name here",
+  "name": "zoominflashcards",
   "version": "0.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
